Menu: remove gap in dropdown if scrolling, fixes #2858 and #1003110.

--- a/engines/bastion/app/assets/bastion/stylesheets/_menu.scss
+++ b/engines/bastion/app/assets/bastion/stylesheets/_menu.scss
@@ -149,3 +149,17 @@ nav {
     }
   }
 } /*end nav*/
+
+html .dropdown {
+  position: absolute;
+}
+
+html .dropdown-item-link {
+  white-space: nowrap;
+}
+
+html .nav-header {
+  height: 40px;
+  overflow: visible;
+  position: absolute;
+}
